Succesfully created first rendition of the / /login endpoints
